# uenclient

./: .gitignore  CMakeLists.txt  fedora_cross_build.sh  fedora_debug_build.sh  main.cpp  uenclient.cpp  uenclient.h  uenclient.kdev4  uenclient.qrc  uenclient.rc
cmake/: Findlibtorrent.cmake
forms/: torrentcreateform.ui
gloox/: jid.h
jreen/: CMakeLists.txt
src/: addtorrentdialog.cpp  bencoder.cpp  bencoder.h  chatdialog.cpp  chatdialog.h  chatuseritem.cpp  chatuseritem.h  createtorrentdialog.cpp  createtorrentdialog.h  downloadtorrent.cpp  downloadtorrent.h  filemanager.cpp  glooxsession.cpp  glooxsession.h  helper.cpp  helper.h  loginform.cpp  loginform.h  main.cpp  metainfo.cpp  metainfo.h  peerwireclient.cpp  privatechat.cpp  privatechat.h  ratecontroller.cpp  smilehandler.cpp  smilehandler.h  torrentclient.cpp  torrentdialog.cpp  torrentdialog.h  torrentserver.cpp  trackerclient.cpp  uenclient.cpp  uenclient.h
translations/: en.ts
